# Goes

./: .gitignore  Readme.md  index.html  package-lock.json  package.json  tmp.py  tsconfig.json  vite.config.ts
ai/: CMakeLists.txt  Readme.md  analysis.py
ai/include/game/: board_config.h  board_state.h
ai/include/mcts/: mcts.h
ai/include/model/: any_model.h  cnn.h  evaluator.h  features.h  gnn.h  model_config.h  transformer.h  unet.h
ai/include/training/: replay_buffer.h  self_play.h
ai/include/util/: sha256.h
ai/src/: server.cpp  train.cpp
ai/src/game/: board_config.cpp  board_state.cpp
ai/src/mcts/: mcts.cpp
ai/src/model/: cnn.cpp  features.cpp  gnn.cpp  model_config.cpp  transformer.cpp  unet.cpp
ai/src/training/: replay_buffer.cpp  self_play.cpp
ai/src/util/: sha256.cpp
public/game_presets/: 10_coin_go.json  10_friend_go.json  13x13_4_color_go.json  13x13_two_ply_go.json  3_coin_go.json  3_friend_go.json  3_player_go.json  3x3_go_fpo.json  4_color_go.json  4x4_go_fpo.json  5x5_go_fpo.json  7x7x2_twsq_go.json  7x7x2_twsq_go_fpo.json  9x9_go.json  9x9_go_fpo.json  go.json  go_fpo.json  two_ply_go.json  two_ply_go_fpo.json
server/: package-lock.json  package.json  tsconfig.json
server/src/: engineManager.ts  engineProxy.ts  gameManager.ts  gameRecordStore.ts  index.ts  onlineGameManager.ts  userStore.ts  wsServer.ts
server/src/routes/: ai.ts  game.ts  onlineGame.ts
shared/: avlTree.ts  boardConfig.ts  boardState.ts  types.ts
src/: main.ts  renderer.ts  serverConnection.ts  sidePanel.ts
test/: boardConfig.starPoints.test.ts  boardState.finishedGame.test.ts  boardState.friendly.test.ts  boardState.globalStonePlaceLimit.test.ts  boardState.koRule.test.ts  boardState.komi.test.ts  boardState.maxPlies.test.ts  boardState.pass.test.ts  boardState.playerStonePlaceLimit.test.ts  boardState.protected.test.ts  boardState.resign.test.ts  boardState.stoneToPlayerMap.test.ts  gameConfig.test.ts  tsconfig.json
test/renderer/: domSetup.ts  localGame.test.ts  online.test.ts  stoneSelection.test.ts
test/server/: auth.test.ts  onlineGame.test.ts  testServer.ts
